--- a/src/components/FormHeader/FormHeader.module.css
+++ b/src/components/FormHeader/FormHeader.module.css
@@ -1,57 +1,57 @@
-.FormHeader{
-display: flex;
-align-items: center;
-padding:16px;
-cursor:pointer;
+.FormHeader {
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  cursor: pointer;
 }
 
-.status{
-    width:48px;
-    height:48px;
-    background:#0061D9;
-    color:#fff;
-    border-radius: 50%;
-    font-family: SF Pro Display;
-    font-size: 22px;
-    line-height: 28px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.status {
+  width: 48px;
+  height: 48px;
+  background: #0061d9;
+  color: #fff;
+  border-radius: 50%;
+  font-family: SF Pro Display;
+  font-size: 22px;
+  line-height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.active{
-    width:48px;
-    height:48px;
-    background:#1BC400;
-    color:#fff;
-    border-radius: 50%;
-    font-family: SF Pro Display;
-    font-size: 22px;
-    line-height: 28px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.active {
+  width: 48px;
+  height: 48px;
+  background: #1bc400;
+  color: #fff;
+  border-radius: 50%;
+  font-family: SF Pro Display;
+  font-size: 22px;
+  line-height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.inactive{
-    width:48px;
-    height:48px;
-    background: #BCC3CA;
-    color:#fff;
-    border-radius: 50%;
-    font-family: SF Pro Display;
-    font-size: 22px;
-    line-height: 28px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.inactive {
+  width: 48px;
+  height: 48px;
+  background: #bcc3ca;
+  color: #fff;
+  border-radius: 50%;
+  font-family: SF Pro Display;
+  font-size: 22px;
+  line-height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .FormHeader h3 {
-    margin:0;
-    padding:0;
-    margin-left:32px;
-    font-family: SF Pro Display;
-    font-size: 21px;
-    line-height: 32px;  
+  margin: 0;
+  padding: 0;
+  margin-left: 32px;
+  font-family: SF Pro Display;
+  font-size: 21px;
+  line-height: 32px;
 }
