--- a/src/components/Intro/Intro.module.css
+++ b/src/components/Intro/Intro.module.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   padding-top: 152px;
   padding-bottom: 40px;
-  color: #3B4256;
+  color: #3b4256;
 }
 
 .text {
